# vobenchmarking

./: .gitattributes  .gitignore  README.md
dataset_processing/: 4seasons_to_bag.py  tartan_air_to_bag.py
dataset_processing/4seasonsbag/: 4seasonsbag_0.mcap  metadata.yaml
dataset_processing/abandoned_factory_bag/: metadata.yaml  tartan_air_bag_0.mcap
dataset_processing/gascola_bag/: gascola_bag_0.mcap  metadata.yaml
dataset_processing/office_bag/: metadata.yaml  office_bag_0.mcap
deepvo/: preprocess.py
evaluator/eval/: evaluator.py
evaluator/results/: gt.csv  predicted.csv
ros2_ws/src/vo_eval_ros/: CMakeLists.txt  package.xml
ros2_ws/src/vo_eval_ros/config/: evaluation_rviz_config.rviz  odom_gnss_params.yml  odometer_params.yml
ros2_ws/src/vo_eval_ros/launch/: rtab_4seasons_launch.py  rtab_eval_launch.py  rtab_tartan_air_launch.py  undeep_4seasons_launch.py  undeep_tartan_air_launch.py
ros2_ws/src/vo_eval_ros/scripts/: helpers.py  undeep_vo_four_seasons_node.py  undeep_vo_node.py  undeep_vo_tartan_air_node.py  undeep_vo_tartan_node.py
ros2_ws/src/vo_eval_ros/scripts/model/: depth_model.py
ros2_ws/src/vo_eval_ros/src/: image_decompressor_left.py  image_decompressor_right.py  rtab_gnss_odom_eval_supervisor.cpp  rtab_odom_eval_supervisor.cpp  vo_odom_stream_dumper.cpp
ros2_ws/src/vo_eval_ros/vo_eval_ros/: evaluator.py
undeepvo/: model_runner.py  test.py  train.py
undeepvo/data_processing/: four_seasons.py  tartan_air.py
undeepvo/losses/: disparity_consistency_loss.py  geometric_registration_loss.py  helpers.py  pose_consistency_loss.py  pose_inverse_loss.py  spatial_consistency_loss.py  temporal_consistency_loss.py
undeepvo/model/: full_model.py  pose_model.py
